# python_web_components

./: README.md  pyproject.toml
examples/fastapi_todo_app/: Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  requirements.txt
examples/fastapi_todo_app/app/: crud.py  database.py  dependencies.py  main.py  models.py  routes.py  schemas.py  views.py
examples/flask_example/: app.py  requirements.txt
src/python_web_components/: __init__.py  base.py  document.py  form.py  layout.py  multimedia.py  navigation.py  text.py  utils.py
