[project]
name = "python_web_components"
version = "0.1.0"
description = "HTML components as Python objects."
authors = [
    { name = "Zachary McGuire", email = "zacharymcguire@pm.me" },
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
]
